--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
+    compile('com.mikepenz:materialdrawer:5.3.6@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
