--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -32,5 +33,18 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.3.6@aar') {
         transitive = true
     }
+    apt "org.androidannotations:androidannotations:4.2.0"
+    compile "org.androidannotations:androidannotations-api:4.2.0"
     testCompile 'junit:junit:4.12'
+}
+
+apt {
+    arguments {
+        // you should set your package name here if you are using different application IDs
+        resourcePackageName "by.chagarin.androidlesson"
+        androidManifestFile variant.outputs[0]?.processResources?.manifestFile
+        // You can set optional annotation processing options here, like these commented options:
+        // logLevel 'INFO'
+        // logFile '/var/log/aa.log'
+    }
 }
