--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
     }
 }
 
