--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion '23.0.1'
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId "by.chagarin.androidlesson"
         minSdkVersion 14
@@ -31,11 +31,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.melnykov:floatingactionbutton:1.3.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
+    compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile('com.mikepenz:materialdrawer:5.3.6@aar') {
         transitive = true
     }
-    apt "org.androidannotations:androidannotations:4.2.0"
-    compile 'org.androidannotations:androidannotations-api:4.2.0'
+    apt "org.androidannotations:androidannotations:3.3.1"
+    compile 'org.androidannotations:androidannotations-api:3.3.1'
     testCompile 'junit:junit:4.12'
 }
 
