--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,7 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
-    <uses-permission android:name="android.permission.USE_GRADENTIALS" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.USE_CREDENTIALS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -29,6 +27,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity_" />
         </activity>
+
+        <service
+            android:name='.auth.AuthService'
+            android:exported='false'>
+            <intent-filter>
+                <action android:name='android.accounts.AccountAuthenticator' />
+            </intent-filter>
+            <meta-data
+                android:name='android.accounts.AccountAuthenticator'
+                android:resource='@xml/authenticator' />
+        </service>
     </application>
+
 
 </manifest>
