--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
         mavenCentral()
         mavenLocal()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://jitpack.io" }
     }
 }
 
