--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     compile 'org.springframework.android:spring-android-rest-template:1.0.1.RELEASE'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    compile 'com.wdullaer:materialdatetimepicker:2.5.0'
+    compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
     compile('com.mikepenz:materialdrawer:5.3.6@aar') {
         transitive = true
     }
