--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
     compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
     compile 'org.androidannotations:androidannotations-api:3.3.1'
-
+    compile 'com.afollestad.material-dialogs:core:0.9.3.0'
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
