--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
     repositories {
         mavenCentral()
         mavenLocal()
+        jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://jitpack.io" }
     }
