--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile('com.mikepenz:materialdrawer:5.3.6@aar') {
+    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
+    compile "com.mikepenz:crossfader:1.5.0@aar"
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
@@ -44,6 +45,7 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     compile 'com.wdullaer:materialdatetimepicker:2.5.0'
     compile 'com.mikepenz:fontawesome-typeface:4.7.0.0@aar'
+    compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     compile 'org.androidannotations:androidannotations-api:3.3.1'
     compile 'com.afollestad.material-dialogs:core:0.9.3.0'
     compile 'com.firebaseui:firebase-ui-database:1.0.0'
