--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     }
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile "com.mikepenz:crossfader:1.5.0@aar"
+    compile 'com.mikepenz:itemanimators:0.5.0@aar'
+    compile 'com.mikepenz:crossfadedrawerlayout:1.0.0@aar'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:cardview-v7:25.1.1'
